Ensure that Find Again (F3) iterates over all matches, even when the ESM::MoveFocusToCaret() takes a shortcut that leaves the focus controller slightly out-of-sync, b=249345, r+sr=jst